--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=cryptoconnect
+server.port=8080
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/cryptoconnect
 spring.datasource.username=root
-spring.datasource.password=#sonali123
+spring.datasource.password=\#sonali123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA (Hibernate)
