--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.0</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>3.2.5</version>
+		<relativePath />
 	</parent>
+
+
 	<groupId>com.example</groupId>
 	<artifactId>cryptoconnect</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -60,6 +62,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-messaging</artifactId>
 		</dependency>
 
 
