completed my project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,14 @@ server.port=8080
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/cryptoconnect
 spring.datasource.username=root
-spring.datasource.password=\#sonali123
+spring.datasource.password=#sonali123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA (Hibernate)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Blockchain config
+blockchain.rpc.url=http://127.0.0.1:7545
+blockchain.private.key=${BLOCKCHAIN_PRIVATE_KEY}
+blockchain.contract.address=0xd9145CCE52D386f254917e481eB44e9943F39138
